--- a/styles.css
+++ b/styles.css
@@ -15,7 +15,16 @@
 }
 /* MOBILE */
 @media screen and (max-width: 767px) {
-  div#flex {
+  h1 {
+    font-size: 7.5vw;
+    margin-top: 2% !important;
+  }
+
+  h2 {
+    font-size: 1.8em;
+  }
+
+  div#preview {
     display: block;
   }
 
@@ -66,21 +75,108 @@
     z-index: 1;
   }
 
+  button.heading {
+    height: 57px;
+    margin-bottom: 1.5% !important;
+  }
+
+  .option {
+    padding: 9px 25px !important;
+  }
+
+  #random,
+  #download {
+    background-color: #675640;
+  }
 }
 
 /*TABLET*/
 @media screen and (min-width: 768px) and (max-width: 1023px) {
+  h1 {
+    font-size: 4em;
+  }
 
+  h2 {
+    font-size: 2.2em;
+  }
 
+  #options {
+    overflow-y: auto;
+    display: flex;
+    position: relative;
+    height: fit-content;
+    max-height: 60vh;
+    width: 50vw;
+    background-color: rgba(235, 229, 221, 1);
+    box-shadow: inset 1px 1px 1px 1px #c7bfb38c;
+  }
+
+  .expand::before {
+    right: 10% !important;
+  }
+
+  #random,
+  #download {
+    background-color: #3e2627;
+  }
+
+  button.heading {
+    height: 56px;
+    margin-bottom: 1% !important;
+  }
+
+  .option {
+    padding: 7px 23px !important;
+  }
 }
 
 /*DESKTOP*/
-@media screen and (min-width: 1024px)
-{
- #options {
-  
- }
+@media screen and (min-width: 1024px) {
+  body {
+    padding: 1% 5% !important;
+    max-height: 100vh;
+    overflow: auto;
+  }
 
+  h1 {
+    font-size: 4em;
+  }
+
+  h2 {
+    font-size: 2.5em;
+  }
+
+  #options {
+    overflow-y: auto;
+    display: flex;
+    position: relative;
+    height: fit-content;
+    max-height: 60vh;
+    width: 50vw;
+    background-color: rgba(235, 229, 221, 1);
+    box-shadow: inset 1px 1px 1px 1px #c7bfb38c;
+  }
+
+  .expand {
+    max-height: none;
+  }
+
+  .heading::before {
+    right: 5% !important;
+  }
+
+  #image-container {
+    width: max(26vw, 100px) !important;
+  }
+
+  #random,
+  #download {
+    background-color: #5a4436;
+  }
+
+  button.heading {
+    height: 55px;
+  }
 }
 
 * {
@@ -93,7 +189,7 @@ html {
 }
 
 body {
-  font-family: "Poppins", sans-serif;
+  font-family: "Lato", sans-serif;
   font-weight: 400;
   padding: 1% 3%;
   background-color: #f5efe7;
@@ -101,18 +197,31 @@ body {
   box-sizing: border-box;
   font-size: 12px;
   justify-content: center;
-  -webkit-user-select: none; 
-  -ms-user-select: none; 
-  user-select: none; 
+  -webkit-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+}
+
+::-webkit-scrollbar {
+  width: 8px;
+  height: 10px;
+}
+::-webkit-scrollbar-thumb {
+  border-radius: 20px;
+  background: #67564070;
+}
+
+::-webkit-scrollbar-track {
+  margin-top: 8px;
+  margin-bottom: 8px;
 }
 
 h1 {
-  font-family: "Poppins", sans-serif;
-  font-size: 4em;
-  margin: 0 2% 0.5% 1%;
+  font-family: "Permanent Marker", sans-serif;
+  margin: 0 10% 0.5% 1%;
   color: #533306;
   line-height: 1.2em;
-  text-shadow: 0.5px 0 #463107;
+  text-shadow: 0.3px 0 #463107;
 }
 
 .ml10 {
@@ -126,7 +235,7 @@ h1 {
   padding-top: 0.2em;
   padding-right: 0.05em;
   padding-bottom: 0.1em;
-  overflow: hidden;
+  overflow: visible;
 }
 
 .ml10 .letter {
@@ -136,7 +245,7 @@ h1 {
 }
 
 h2 {
-  font-size: 2em;
+  font-family: "Poppins", sans-serif;
   margin: 1% 0 0 3%;
   color: #533306;
   line-height: 1.2em;
@@ -157,8 +266,8 @@ h2 {
   width: max(35vw, 201px);
 }
 
-
 #buttons {
+  font-family: "Poppins", sans-serif;
   text-align: center;
   border-radius: 22px;
   background-color: rgba(235, 229, 221, 1);
@@ -167,7 +276,7 @@ h2 {
   flex-direction: column;
   color: rgba(235, 229, 221, 1);
   padding: 3% 2% 3% 2%;
-  box-shadow: inset 2px 2px 4px 1px #a7a39d8c;
+  box-shadow: inset 1px 1px 1px 1px #c7bfb38c;
 }
 
 img {
@@ -175,7 +284,7 @@ img {
   position: absolute;
 }
 
-#flex {
+#preview {
   display: flex;
   justify-content: center;
   gap: 4%;
@@ -188,70 +297,77 @@ input[type="checkbox"] {
 
 #options {
   border-radius: 22px;
-  background-color: rgba(235, 229, 221, 1);
   display: flex;
   margin: 2% 2% 2% 2%;
   flex-direction: column;
   color: rgba(235, 229, 221, 1);
   padding: 3% 2% 3% 2%;
-  box-shadow: inset 2px 2px 4px 1px #a7a39d8c;
   height: fit-content;
-  width: auto;
 }
 
 .expand {
-  max-height: 54.5px;
   box-sizing: border-box;
-  margin-bottom: 10px;
-  overflow: hidden;
-  transition: max-height 0.75s, border-radius 1s;
+  margin-bottom: 1%;
   background-color: #c7b299;
   border-radius: 28px;
   border: 2px solid #675640;
   cursor: pointer;
+  display: none;
 }
 
-span.heading {
-  font-size: 1.6em;
+button.heading {
+  text-align: left;
+  font-family: "Poppins", sans-serif;
+  font-size: 1.5em;
   font-weight: 600;
   color: #fff8e8;
-  height: 54.5px;
   box-sizing: border-box;
   display: block;
   background-color: #a9957d;
   padding: 10px 20px;
   transition: all 1s;
+  cursor: pointer;
+  border-radius: 28px;
+  border: 2px solid #675640;
+  margin-bottom: 2px;
+  margin-top: 1%;
 }
 
-.expand::before {
-  content: "v";
+button.heading:first-child {
+  margin-top: 0;
+}
+
+.heading::before {
+  font-family: FontAwesome;
+  content: "\f107";
   position: absolute;
   display: block;
   color: #ebe5dd;
-  font-size: 1.6em;
+  font-size: 1.2em;
   text-align: right;
   box-sizing: border-box;
   font-weight: 600;
   right: 15%;
-  line-height: 54.5px;
 }
 
-.expand:focus {
+.heading.active {
   max-height: 777px;
   border-radius: 28px;
+  box-shadow: 0px 1px 0px #533306, 0px 1px 1px rgba(0, 0, 0, 0.9);
 }
 
 #backgrounds:focus {
-  max-height: 442px;
+  max-height: 1000px;
 }
 
-.expand:focus::before {
-  content: "^";
+.heading.active::before {
+  content: "\f106";
 }
 
-.expand:hover span.heading,
-.expand:focus span.heading {
+.heading:hover,
+.heading.active {
   background-color: #a68b5b;
+  transition: 0.5s ease-in-out;
 }
 
 .button-container {
@@ -260,7 +376,13 @@ span.heading {
   cursor: default;
 }
 
-.button-container input, .whole-container input {
+.whole-container {
+  text-align: center;
+  padding: 0.5% 0 1% 0;
+}
+
+.button-container input,
+.whole-container input {
   appearance: none;
   display: none;
 }
@@ -362,6 +484,7 @@ span.heading {
   margin: 5px 0;
   text-align: center;
   font-size: 1.2em;
+  transition: 0.5s;
 }
 
 #brown {
@@ -375,6 +498,7 @@ span.heading {
   margin: 5px 0;
   text-align: center;
   font-size: 1.2em;
+  transition: 0.5s;
 }
 
 .option {
@@ -387,6 +511,8 @@ span.heading {
   cursor: pointer;
   margin: 5px 0;
   text-align: center;
+  font-size: 1.2em;
+  transition: 0.25s;
 }
 
 .option:hover,
@@ -394,7 +520,8 @@ span.heading {
 #brown:hover {
   border-color: #523a17b7;
   color: #dd8500 !important;
-  transition: 0.5s;
+  transition: 0.5s ease-in-out;
+  transform: scale(1.02);
 }
 
 .background {
@@ -404,10 +531,11 @@ span.heading {
 input[type="radio"]:checked + .option {
   background-color: #675640 !important;
   color: #ebe5dd !important;
+  transform: scale(1);
 }
 
-button {
-  background-color: #675640;
+#random,
+#download {
   font-size: 1.7em;
   font-weight: 600;
   font-family: "Poppins", sans-serif;
@@ -416,12 +544,17 @@ button {
   color: #fff8e8;
   padding: 2vh 1vw;
   margin: 2%;
+  transition: 0.8s;
 }
 
-button:hover {
+#random:hover,
+#download:hover,
+#random:active,
+#download:active {
   background-color: #c57702;
   cursor: pointer;
   transition: 1s;
+  transform: scale(1.01);
 }
 
 #download-link,
@@ -431,67 +564,78 @@ canvas {
 
 #info {
   background-color: #f5efe7;
-  border: 4px solid #675640 !important;
+  border: 2px solid #675640;
   color: #675640;
   border-radius: 50% !important;
-  width: 30px;
-  height: 30px;
+  height: 40px;
+  aspect-ratio: 1;
+  font-size: 2.2em;
+  font-weight: bolder;
   display: inline-flex;
   align-items: center;
   justify-content: center;
   cursor: pointer;
-  border-radius: 50%;
   position: absolute;
-  top: 10px;
-  right: 10px;
+  top: 3%;
+  right: 3%;
 }
 
+#info:hover {
+  color: #c57702;
+  border: 2px solid #c57702;
+  transition: 0.5s;
+  transform: scale(1.05);
+}
 
 .modal {
-  display: none; /* Hidden by default */
-  position: fixed; /* Stay in place */
-  z-index: 2; /* Sit on top */
+  display: none;
+  position: fixed;
+  z-index: 2;
   left: 0;
   top: 0;
-  width: 100%; /* Full width */
-  height: 100%; /* Full height */
-  overflow: auto; /* Enable scroll if needed */
-  background-color: rgb(0,0,0); /* Fallback color */
-  background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+  background-color: rgb(0, 0, 0);
+  background-color: rgba(0, 0, 0, 0.4);
+  border-radius: 15px;
 }
 
-/* Modal Content/Box */
+.modal-content h2 {
+  color: #533306;
+  font-family: "Poppins", sans-serif;
+  font-weight: 600;
+  text-align: center;
+  margin: 4%;
+}
+
 .modal-content {
   background-color: #f5efe7;
-  margin: 15% auto; /* 15% from the top and centered */
+  margin: 4% auto;
   padding: 20px;
   border: 1px solid #a9957d;
-  width: 80%; /* Could be more or less, depending on screen size */
+  width: fit-content;
+  overflow: auto;
+  border-radius: 15px;
 }
 
-/* The Close Button */
 .close {
   color: #a9957d;
   float: right;
-  font-size: 28px;
+  font-size: 33px;
   font-weight: bold;
 }
 
 .close:hover,
 .close:focus {
-  color: black;
+  color: #533306;
   text-decoration: none;
   cursor: pointer;
 }
 
-.whole-container {
-  text-align: center;
-  padding: 0.5% 0 1% 0;
-}
-
 .category-rand {
   align-self: center;
-  font-size: 1.2em;
+  font-size: 1.25em;
   display: inline-block;
   padding: 2% 3%;
   border: 2px solid #675640;
@@ -500,3 +644,4 @@ canvas {
   margin: 5px 0;
   text-align: center;
 }
+
