--- a/styles.css
+++ b/styles.css
@@ -216,10 +216,6 @@ body {
   margin-bottom: 8px;
 }
 
-.disable-doubletap-to-zoom {
-  touch-action: none;
-}
-
 h1 {
   font-family: "Permanent Marker", sans-serif;
   margin: 0 10% 0.5% 1%;
@@ -256,6 +252,10 @@ h2 {
   text-shadow: 0.5px 0 #463107;
 }
 
+button {
+  touch-action: manipulation;
+}
+
 #image {
   width: 100%;
   aspect-ratio: 1 / 1;
@@ -281,6 +281,7 @@ h2 {
   color: rgba(235, 229, 221, 1);
   padding: 3% 2% 3% 2%;
   box-shadow: inset 1px 1px 1px 1px #c7bfb38c;
+  touch-action: manipulation;
 }
 
 img {
@@ -335,6 +336,7 @@ button.heading {
   border: 2px solid #675640;
   margin-bottom: 2px;
   margin-top: 1%;
+  touch-action: manipulation;
 }
 
 button.heading:first-child {
@@ -536,6 +538,7 @@ input[type="radio"]:checked + .option {
   background-color: #675640 !important;
   color: #ebe5dd !important;
   transform: scale(1);
+  touch-action: manipulation;
 }
 
 #random,
@@ -549,6 +552,7 @@ input[type="radio"]:checked + .option {
   padding: 2vh 1vw;
   margin: 2%;
   transition: 0.8s;
+  touch-action: manipulation;
 }
 
 #random:hover,
@@ -559,6 +563,7 @@ input[type="radio"]:checked + .option {
   cursor: pointer;
   transition: 1s;
   transform: scale(1.01);
+  touch-action: manipulation;
 }
 
 #download-link,
